Checkpoint: have forecast cards working, still need to space them out.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <!-- Use col-* classes for different column sizes on different screens -->
 
-            <div class="col-12 col-md-6 col-lg-2 bg-dark text-light">
+            <!-- <div class="col-12 col-md-6 col-lg-2 bg-dark text-light">
                 <h3>6/24/2021</h3>
                 <img src="" alt="weather icon" title="weather icon">
                 <p>Temp: 73.5</p>
@@ -101,7 +101,7 @@
                 <p>Temp: 73.5</p>
                 <p>Wind: 9.5 mph</p>
                 <p>Humidity: 44%</p>
-            </div>
+            </div> -->
         </div>
     </section>
 
