--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <div class="col-12 col-md-4 col-xl-3">
                 <h3>Search For A City</h3>
                     <input class="form-control mr-sm-2" id="search-input" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0  search-button" type="button"
-                    data-search-city="Minneapolis">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0  search-button" type="button">Search</button>
                 </form>
             </div>
             <!-- Use col-* classes for different column sizes on different screens -->
@@ -51,23 +50,32 @@
 
     <section class="container my-5">
         <!-- Use row class to create row in the container -->
-        <div class="row card-row">
+        <div class="row card-row" id="card-row">
             <div class="col-12 col-md-4 col-lg-2" id="saved-search-parent">
                 <h5>Saved Search Cities</h5>
                 <ul id="saved-search-cities">
-                    <li><button class="btn btn-outline-success my-2 my-sm-0  saved-search-button" type="button"
-                            data-search-city="Minneapolis">Minneapolis</button></li>
-                    <li><button class="btn btn-outline-success my-2 my-sm-0  saved-search-button" type="button" 
-                            data-search-city="Denver">Denver</button>
-                    </li>
-                    <li><button class="btn btn-outline-success my-2 my-sm-0 saved-search-button" type="button" 
-                            data-search-city="Seattle">Seattle</button>
-                    </li>
                 </ul>
             </div>
             <!-- Use col-* classes for different column sizes on different screens -->
+        </div>
+    </section>
 
-            <!-- <div class="col-12 col-md-6 col-lg-2 bg-dark text-light">
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/main.js"></script>
+</body>
+
+</html>
+
+
+       <!-- <div class="col-12 col-md-6 col-lg-2 bg-dark text-light">
                 <h3>6/24/2021</h3>
                 <img src="" alt="weather icon" title="weather icon">
                 <p>Temp: 73.5</p>
@@ -101,20 +109,13 @@
                 <p>Temp: 73.5</p>
                 <p>Wind: 9.5 mph</p>
                 <p>Humidity: 44%</p>
-            </div> -->
-        </div>
-    </section>
-
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/js/main.js"></script>
-</body>
-
-</html>
+            </div> 
+        
+        <li><button class="btn btn-outline-success my-2 my-sm-0  saved-search-button" type="button"
+                            data-search-city="Minneapolis">Minneapolis</button></li>
+                    <li><button class="btn btn-outline-success my-2 my-sm-0  saved-search-button" type="button" 
+                            data-search-city="Denver">Denver</button>
+                    </li>
+                    <li><button class="btn btn-outline-success my-2 my-sm-0 saved-search-button" type="button" 
+                            data-search-city="Seattle">Seattle</button>
+                    </li>-->
