--- a/index.html
+++ b/index.html
@@ -27,19 +27,17 @@
     </header>
 
     <!-- Two column layout -->
-    <section class="container my-5">
-        <!-- Use row class to create row in the container -->
+    <section class="container-fluid">
         <div class="row">
             <div class="col-12 col-md-4 col-xl-3">
                 <h3>Search For A City</h3>
-                    <input class="form-control mr-sm-2" id="search-input" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0  search-button" type="button">Search</button>
-                </form>
+                <input class="form-control mr-sm-2" id="search-input" type="text" placeholder="Search"
+                    aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0  search-button" type="button">Search</button>
             </div>
-            <!-- Use col-* classes for different column sizes on different screens -->
             <div class="col-12 col-md-8 col-xl-9">
-                
-                <h3><span id="today-city"></span> (<span id="today-date"></span>) <span><img id="header-icon" src="" alt="weather icon" title="weather icon"></span> </h3>
+                <h3><span id="today-city"></span> (<span id="today-date"></span>) <span><img id="header-icon" src=""
+                            alt="weather icon" title="weather icon"></span> </h3>
                 <p>Temp: <span id="today-temp"></span></p>
                 <p>Wind: <span id="today-wind"></span></p>
                 <p>Humidity: <span id="today-humidity"></span></p>
@@ -48,74 +46,25 @@
         </div>
     </section>
 
-    <section class="container my-5">
-        <!-- Use row class to create row in the container -->
+    <section class="container-fluid">
         <div class="row card-row" id="card-row">
-            <div class="col-12 col-md-4 col-lg-2" id="saved-search-parent">
-                <h5>Saved Search Cities</h5>
+            <div class="col-12 col-md-2 col-lg-2" id="saved-search-parent">
+                <h5>Saved Cities</h5>
                 <ul id="saved-search-cities">
                 </ul>
+                <button class="btn btn-outline-success my-1 my-sm-0  clear-search-button" type="button">Clear Search</button>
             </div>
-            <!-- Use col-* classes for different column sizes on different screens -->
         </div>
     </section>
 
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
-
-
-       <!-- <div class="col-12 col-md-6 col-lg-2 bg-dark text-light">
-                <h3>6/24/2021</h3>
-                <img src="" alt="weather icon" title="weather icon">
-                <p>Temp: 73.5</p>
-                <p>Wind: 9.5 mph</p>
-                <p>Humidity: 44%</p>
-            </div>
-            <div class="col-12 col-md-6 col-lg-2 bg-dark text-light">
-                <h3>6/25/2021</h3>
-                <img src="" alt="weather icon" title="weather icon">
-                <p>Temp: 73.5</p>
-                <p>Wind: 9.5 mph</p>
-                <p>Humidity: 44%</p>
-            </div>
-            <div class="col-12 col-md-6 col-lg-2">
-                <h3>6/26/2021</h3>
-                <img src="" alt="weather icon" title="weather icon">
-                <p>Temp: 73.5</p>
-                <p>Wind: 9.5 mph</p>
-                <p>Humidity: 44%</p>
-            </div>
-            <div class="col-12 col-md-6 col-lg-2">
-                <h3>6/27/2021</h3>
-                <img src="" alt="weather icon" title="weather icon">
-                <p>Temp: 73.5</p>
-                <p>Wind: 9.5 mph</p>
-                <p>Humidity: 44%</p>
-            </div>
-            <div class="col-12 col-md-6 col-lg-2">
-                <h3>6/28/2021</h3>
-                <img src="" alt="weather icon" title="weather icon">
-                <p>Temp: 73.5</p>
-                <p>Wind: 9.5 mph</p>
-                <p>Humidity: 44%</p>
-            </div> 
-        
-        <li><button class="btn btn-outline-success my-2 my-sm-0  saved-search-button" type="button"
-                            data-search-city="Minneapolis">Minneapolis</button></li>
-                    <li><button class="btn btn-outline-success my-2 my-sm-0  saved-search-button" type="button" 
-                            data-search-city="Denver">Denver</button>
-                    </li>
-                    <li><button class="btn btn-outline-success my-2 my-sm-0 saved-search-button" type="button" 
-                            data-search-city="Seattle">Seattle</button>
-                    </li>-->
